--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node itxxwasi.js"
   },
   "author": "ArimaTech",
-  "license": "MT license",
+  "license": "MIT license",
   "dependencies": {
     "@whiskeysockets/baileys": "^6.5.0",
     "maher-zubair-baileys": "^6.6.5",
